_errors.txt
In file included from src/libnaudio/n_mainbus.c:20:
src/libnaudio/n_synthInternals.h:94:5: error: unknown type name ‘ALParam’
   94 |     ALParam  *em_ctrlList;
      |     ^~~~~~~
src/libnaudio/n_synthInternals.h:95:5: error: unknown type name ‘ALParam’
   95 |     ALParam  *em_ctrlTail;
      |     ^~~~~~~
src/libnaudio/n_synthInternals.h:106:5: error: unknown type name ‘ALSetParam’
  106 |     ALSetParam          setParam;
      |     ^~~~~~~~~~
src/libnaudio/n_synthInternals.h:119:5: error: unknown type name ‘ALFilter’
  119 |     ALFilter            filter;
      |     ^~~~~~~~
src/libnaudio/n_synthInternals.h:123:5: error: unknown type name ‘ALFx’
  123 |     ALFx                *fx;
      |     ^~~~
src/libnaudio/n_synthInternals.h:124:5: error: unknown type name ‘ALFx’
  124 |     ALFx  *fx_array[AL_MAX_AUX_BUS_SOURCES];
      |     ^~~~
src/libnaudio/n_synthInternals.h:124:21: error: ‘AL_MAX_AUX_BUS_SOURCES’ undeclared here (not in a function)
  124 |     ALFx  *fx_array[AL_MAX_AUX_BUS_SOURCES];
      |                     ^~~~~~~~~~~~~~~~~~~~~~
src/libnaudio/n_synthInternals.h:129:1: error: unknown type name ‘ALParam’; did you mean ‘ALPan’?
  129 | ALParam         *__n_allocParam(void);
      | ^~~~~~~
      | ALPan
src/libnaudio/n_synthInternals.h:130:30: error: unknown type name ‘ALParam’; did you mean ‘ALPan’?
  130 | void            _n_freeParam(ALParam *param);
      |                              ^~~~~~~
      |                              ALPan
src/libnaudio/n_synthInternals.h:151:16: error: unknown type name ‘ALFx’; did you mean ‘ALFxId’?
  151 | void n_alFxNew(ALFx **r, ALSynConfig *c, ALHeap *hp);
      |                ^~~~
      |                ALFxId
src/libnaudio/n_synthInternals.h:161:20: error: unknown type name ‘ALLowPass’
  161 | void init_lpfilter(ALLowPass *lp);
      |                    ^~~~~~~~~
In file included from include/2.0I/PR/libaudio.h:37,
                 from include/2.0I/PR/n_libaudio.h:25,
                 from src/libnaudio/n_synthInternals.h:23,
                 from src/libnaudio/n_mainbus.c:20:
src/libnaudio/n_mainbus.c: In function ‘n_alMainBusPull’:
src/libnaudio/n_mainbus.c:27:23: error: ‘AL_MAIN_L_OUT’ undeclared (first use in this function); did you mean ‘N_AL_MAIN_L_OUT’?
   27 |   aClearBuffer(ptr++, AL_MAIN_L_OUT, FIXED_SAMPLE<<1);
      |                       ^~~~~~~~~~~~~
include/2.0I/PR/mbi.h:48:38: note: in definition of macro ‘_SHIFTL’
   48 |     ((unsigned int) (((unsigned int)(v) & ((0x01 << (w)) - 1)) << (s)))
      |                                      ^
src/libnaudio/n_mainbus.c:27:3: note: in expansion of macro ‘aClearBuffer’
   27 |   aClearBuffer(ptr++, AL_MAIN_L_OUT, FIXED_SAMPLE<<1);
      |   ^~~~~~~~~~~~
src/libnaudio/n_mainbus.c:27:23: note: each undeclared identifier is reported only once for each function it appears in
   27 |   aClearBuffer(ptr++, AL_MAIN_L_OUT, FIXED_SAMPLE<<1);
      |                       ^~~~~~~~~~~~~
include/2.0I/PR/mbi.h:48:38: note: in definition of macro ‘_SHIFTL’
   48 |     ((unsigned int) (((unsigned int)(v) & ((0x01 << (w)) - 1)) << (s)))
      |                                      ^
src/libnaudio/n_mainbus.c:27:3: note: in expansion of macro ‘aClearBuffer’
   27 |   aClearBuffer(ptr++, AL_MAIN_L_OUT, FIXED_SAMPLE<<1);
      |   ^~~~~~~~~~~~
src/libnaudio/n_mainbus.c:28:23: error: ‘AL_MAIN_R_OUT’ undeclared (first use in this function); did you mean ‘N_AL_MAIN_R_OUT’?
   28 |   aClearBuffer(ptr++, AL_MAIN_R_OUT, FIXED_SAMPLE<<1);
      |                       ^~~~~~~~~~~~~
include/2.0I/PR/mbi.h:48:38: note: in definition of macro ‘_SHIFTL’
   48 |     ((unsigned int) (((unsigned int)(v) & ((0x01 << (w)) - 1)) << (s)))
      |                                      ^
src/libnaudio/n_mainbus.c:28:3: note: in expansion of macro ‘aClearBuffer’
   28 |   aClearBuffer(ptr++, AL_MAIN_R_OUT, FIXED_SAMPLE<<1);
      |   ^~~~~~~~~~~~
src/libnaudio/n_mainbus.c:37:26: error: ‘AL_AUX_L_OUT’ undeclared (first use in this function); did you mean ‘N_AL_AUX_L_OUT’?
   37 |   aMix(ptr++, 0, 0x7fff, AL_AUX_L_OUT, AL_MAIN_L_OUT);
      |                          ^~~~~~~~~~~~
include/2.0I/PR/mbi.h:48:38: note: in definition of macro ‘_SHIFTL’
   48 |     ((unsigned int) (((unsigned int)(v) & ((0x01 << (w)) - 1)) << (s)))
      |                                      ^
src/libnaudio/n_mainbus.c:37:3: note: in expansion of macro ‘aMix’
   37 |   aMix(ptr++, 0, 0x7fff, AL_AUX_L_OUT, AL_MAIN_L_OUT);
      |   ^~~~
src/libnaudio/n_mainbus.c:38:26: error: ‘AL_AUX_R_OUT’ undeclared (first use in this function); did you mean ‘N_AL_AUX_R_OUT’?
   38 |   aMix(ptr++, 0, 0x7fff, AL_AUX_R_OUT, AL_MAIN_R_OUT);
      |                          ^~~~~~~~~~~~
include/2.0I/PR/mbi.h:48:38: note: in definition of macro ‘_SHIFTL’
   48 |     ((unsigned int) (((unsigned int)(v) & ((0x01 << (w)) - 1)) << (s)))
      |                                      ^
src/libnaudio/n_mainbus.c:38:3: note: in expansion of macro ‘aMix’
   38 |   aMix(ptr++, 0, 0x7fff, AL_AUX_R_OUT, AL_MAIN_R_OUT);
      |   ^~~~
make: *** [Makefile:173: build/2.0I/src/libnaudio/n_mainbus.o] Error 1
